# mac-toys

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
mac_toys/: __init__.py  config.py  event_processing.py  helpers.py  interpolation.py  sse_listener.py  thread_manager.py  tracker.py  vibrator.py
mac_toys/vibration/: ambience.py  intensity.py
